--- a/src/css/hover.css
+++ b/src/css/hover.css
@@ -1711,7 +1711,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
-  background: #e1e1e1;
+  background: rgb(245,245,245);
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1725,7 +1725,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098D1;
+  background: white;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transition-property: transform;
